experimental/parser/testdata/parser/syntax/eof_after_kw.proto.stderr.txt
warning: missing `package` declaration
 --> testdata/parser/syntax/eof_after_kw.proto
   = note: failing to specify a package places the file in the empty package
   = note: using the empty package is discouraged

error: unexpected end-of-file in `syntax` declaration
  --> testdata/parser/syntax/eof_after_kw.proto:15:7
   | 
15 | syntax
   |       ^ expected `=`

encountered 1 error and 1 warning
